# drama-multi-agent

./: .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  mcp.json.example  pyproject.toml  requirements.txt  smoke_test.py
data/faiss_index/: faiss.index
data/knowledge/examples/: sample_scripts.json
data/knowledge/文案/: copywriting_guide.md
data/sessions/: S_0db40fcf56.json  S_10f88c02fd.json  S_11745e2e60.json  S_169b12cc70.json  S_44bf791524.json  S_4569abc88e.json  S_6d09810f34.json  S_7091acc888.json  S_81ae0860fa.json  S_81c957bab2.json  S_82ad7f2366.json  S_86f6d51dbf.json  S_a434ad251f.json  S_ad8d3f562b.json  S_b1a2864038.json  S_b3034b9117.json  S_c03d1f1369.json  S_d23af90ca4.json  S_d913582fbb.json  S_dbde70234d.json  S_df2088964b.json  S_e0a789288c.json  S_e3ce250636.json
data/user_memory/: faiss.index  metadata.pkl
drama-multi-agent/: .env.example  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  demo_api.py  docker-compose.yml  pyproject.toml  requirements.txt  smoke_test.py
drama-multi-agent/data/faiss_index/: faiss.index  metadata.pkl
drama-multi-agent/data/sessions/: S_0cbc8bc591.json  S_13003d2ce8.json  S_1b034d005b.json  S_1cf0cc642a.json  S_383f3a5cf3.json  S_676bb08bc2.json  S_76e1e25b2a.json  S_7e243eb1f7.json  S_8572a19195.json  S_8cec42d7cd.json  S_96a030b8cc.json  S_ae5653693b.json  S_bb064c4ffa.json  S_de058a1dc8.json  S_demo_memory.json  S_e845f7ed68.json  test_concurrent.json  test_ctx_sum.json  test_session_1.json  test_workflow_hook.json
drama-multi-agent/frontend/: index.html
drama-multi-agent/scripts/: api_test.py  build_knowledge.py
drama-multi-agent/src/drama_agent/: __init__.py  __main__.py  api.py  config.py  exceptions.py  graph.py  llm.py  logging_setup.py  memory.py  models.py
drama-multi-agent/src/drama_agent/agents/: __init__.py  audit_agent.py  parser_agent.py  polish_agent.py  prompts.py  retriever_agent.py
drama-multi-agent/src/drama_agent/tools/: __init__.py  compliance_engine.py  text_processor.py  vector_retriever.py
drama-multi-agent/tests/: test_api.py  test_deepseek.py  test_workflow.py
drama-multi-agent/tests/unit/: test_api.py  test_graph_routing.py  test_memory.py  test_tools.py
frontend/: index.html
scripts/: api_test.py  build_knowledge.py
src/drama_agent/: __init__.py  __main__.py  api.py  config.py  graph.py  llm.py  logging_setup.py  mcp_server.py  models.py
src/drama_agent/agents/: audit_agent.py  polish_agent.py  prompts.py  retriever_agent.py
src/drama_agent/tools/: __init__.py  embedding.py  text_processor.py  user_memory.py  vector_retriever.py
tests/: conftest.py  test_api.py  test_compliance.py  test_improvements.py  test_parser.py  test_user_memory.py  test_workflow.py
