[project]
name = "drama-multi-agent"
version = "2.1.0"
description = "短剧多智能体内容生产系统：任务解析 · 素材检索 · 内容润色 · 合规审核 · 会话记忆"
requires-python = ">=3.10"
authors = [{ name = "drama-agent-team" }]
readme = "README.md"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "httpx>=0.27.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.1.0",
  "tenacity>=8.2.3",
  "loguru>=0.7.2",
  "numpy>=1.26.0",
  "faiss-cpu>=1.8.0",
  "langgraph>=0.2.0",
  "langchain-core>=0.3.0",
  "sentence-transformers>=2.5.0",
]

[project.optional-dependencies]
embedding = ["sentence-transformers>=2.5.0"]
mcp = ["mcp>=1.2.0"]
dev = ["pytest>=8.0", "httpx>=0.27.0", "black"]

[project.scripts]
drama-agent = "drama_agent.__main__:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["drama_agent*"]
