[project]
name = "drama-multi-agent"
version = "1.0.0"
description = "基于 LangGraph 的多智能体短剧内容生产系统"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "drama-multi-agent contributors" }]
keywords = ["langgraph", "agent", "drama", "llm", "multi-agent", "pydantic"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "faiss-cpu>=1.8.0",
    "numpy>=1.26.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "tenacity>=8.2.3",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.27.0",
    "jieba>=0.42.1",
]

# 可选依赖（需要额外的模型库）
[project.optional-dependencies]
embeddings = ["sentence-transformers>=2.5.0"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.3.0", "black>=24.0"]
all = ["drama-multi-agent[embeddings,dev]"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["drama_agent", "drama_agent.agents", "drama_agent.tools"]

[tool.setuptools.package-dir]
"" = "src"

# =============================================================================
# 测试 / lint
# =============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-ra -q"

[tool.coverage.run]
source = ["src/drama_agent"]
omit = ["src/drama_agent/__main__.py", "src/drama_agent/*_test.py"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
# E501 行长度忽略；F401 未使用 import；E402 模块级 import 不按顺序 — 都保留默认
select = ["E", "F", "W", "I", "B", "UP"]
# 部分 Python 2 风格规则保留默认开启；这里仅排除无意义的检查
ignore = ["E501", "F401", "F841", "E402"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["E501"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.mypy]
strict = false
ignore_missing_imports = true
